--- a/scheduler/templates/scheduler/evento.html
+++ b/scheduler/templates/scheduler/evento.html
@@ -13,6 +13,7 @@
 <p>Hora inicio: {{evento.horaInicio }}</p>
 <p>Hora fin: {{evento.horaFin }}</p>
 <p>Facilitadores: {% for faci in evento.facis.all %}{{faci.user.first_name }} {{faci.user.last_name }}, {% endfor %}</p>
+<p>Descripción: {{evento.descripcion }}</p>
 {% if request.user.persona.rol.esConference %}
     <p>OC encargado: {% for oc in evento.ocsEncargados.all %}{{oc.user.first_name}} {{oc.user.last_name }}, {% endfor %}</p>
     <p>Archivos adjuntos: 
