--- a/scheduler/templates/scheduler/check_in_status.html
+++ b/scheduler/templates/scheduler/check_in_status.html
@@ -2,9 +2,9 @@
 
 {% load staticfiles %}
 
-{% block title %}Networking{% endblock %}
+{% block title %}Status Check In{% endblock %}
 
-{% block page-header  %} Networking  {% endblock %}
+{% block page-header  %}Check In Status - {{ evento }}{% endblock %}
 
 {% block body-class %}networking{% endblock %}
 
@@ -18,10 +18,7 @@
     <tr>
         <th>Nombre</th>
         <th>LC</th>
-        <th>Area</th>
-        <th>Rol</th>
-        <th>Celular</th>
-        <th>Correo electrónico</th>
+        <th>Check in</th>
     </tr>
     </thead>
     <tbody class="list">
@@ -29,10 +26,9 @@
     <tr>
         <td class="b_nombre"><a href="{% url 'scheduler:persona' usuario.persona.pk %}">{{ usuario.first_name }} {{ usuario.last_name }}</a></td>
         <td class="b_lc">{{ usuario.persona.lc }}</td>
-        <td class="b_area">{{ usuario.persona.area }} </td>
-        <td class="b_rol">{{ usuario.persona.rol }} </td>
-        <td>{{ usuario.persona.celular }}</td>
-        <td>{{ usuario.email }}</td>
+        <td class="b_checkin">
+            {{ usuario.persona.estaRegistradoVPM }} 
+        </td>
     </tr>
     {% endfor %}
     </tbody>
@@ -45,7 +41,7 @@
 <script>
     var options = {
         valueNames: [ 'b_nombre', 'b_lc', 'b_area', 'b_rol' ],
-        page: 500
+        page:500
     };
 
     var userList = new List('users', options);
