--- a/scheduler/templates/scheduler/habitacion.html
+++ b/scheduler/templates/scheduler/habitacion.html
@@ -4,7 +4,7 @@
 {% load app_filters %}
 
 {% block title %}Habitacion {{ habitacion.numero }} {% endblock %}
-{% block page-header %} Consulta tu habitación {% endblock %}
+{% block page-header %}{{habitacion.torre}}{% endblock %}
 {% block body-class %}habitacion{% endblock %}
 {% block body_block %}
 <div class="container-fluid habitacion">
