--- a/scheduler/templates/scheduler/check_in_status.html
+++ b/scheduler/templates/scheduler/check_in_status.html
@@ -18,8 +18,8 @@
     <tr>
         <th>Nombre</th>
         <th>LC</th>
-        <th>Check in día 1</th>
-        <th>Check in día 2</th>
+        <th>Check in</th>
+        <th>Número de maletas</th>
     </tr>
     </thead>
     <tbody class="list">
@@ -27,11 +27,11 @@
     <tr>
         <td class="b_nombre"><a href="{% url 'scheduler:persona' usuario.persona.pk %}">{{ usuario.first_name }} {{ usuario.last_name }}</a></td>
         <td class="b_lc">{{ usuario.persona.lc }}</td>
-        <td class="b_checkin1">
-            {{ usuario.persona.estaRegistradoVPM }} 
+        <td class="b_checkin">
+            {{ usuario.persona.estaRegistrado }} 
         </td>
-        <td class="b_checkin2">
-            {{ usuario.persona.estaRegistradoVPM2 }} 
+        <td >
+            {{ usuario.persona.numMaletas }} 
         </td>
     </tr>
     {% endfor %}
@@ -44,7 +44,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
 <script>
     var options = {
-        valueNames: [ 'b_nombre', 'b_lc', 'b_checkin1', 'b_checkin2' ],
+        valueNames: [ 'b_nombre', 'b_lc', 'b_checkin' ],
         page:500
     };
 
