--- a/scheduler/templates/scheduler/editar_descripcion.html
+++ b/scheduler/templates/scheduler/editar_descripcion.html
@@ -6,7 +6,7 @@
 {% block page-header  %}Editar descripción  {% endblock %}
 
 {% block body_block %}
-<form class="form" method="POST" action="{% url 'scheduler:editar_descripcion' evento.pk %}">
+<form class="form" method="POST" action="{{ formUrl }}">
     
     {% csrf_token %}
     {{ form.as_p }}
