--- a/scheduler/templates/registration/login.html
+++ b/scheduler/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 {% block title %}Login{% endblock %}
 {% block page-header %} 
-<img alt="Bienvenido a NATCO" src="{% static "scheduler/img/logoNATCO.svg"%}"/>
+<img alt="Bienvenido a Starway" src="{% static "scheduler/img/starway_logo.png"%}"/>
 {% endblock %}
 {% block body-class %}login{% endblock %}
 {% block body_block %}
