--- a/scheduler/templates/scheduler/index.html
+++ b/scheduler/templates/scheduler/index.html
@@ -5,19 +5,20 @@
 
 {% block title %}Perfil{% endblock %}
 {% block page-header %}
+{% comment %}
             <img src="{% get_media_prefix %}{{user.persona.foto}}" alt="Imagen de perfil" width="120" class="img-responsive img-circle center-block"/><br/>
-Hola {{user.first_name }} 
+{% endcomment %}
+Hola {{user.person.nombre}} 
 {% endblock %}
 {% block body-class %}inicio{% endblock %}
 {% block body_block %}
 <div class="fluid-container">
     <div class="row">
         <div class="col-xs-12" >
-        <p> Bienvenido a NATCO 2015, el #MejorEventoDelAño. De parte del OC y de AIESEC en Colombia esperamos tengas una experiencia maravillosa en este evento.</p>
+        <p> Bienvenido a Starway 2016, el #MejorEventoDelAño. De parte del OC y de AIESEC en Colombia esperamos tengas una experiencia maravillosa en este evento.</p>
         <p>Consulta tu habitación y tus roommates dando <a href="{% url "scheduler:habitacion" %}">click aquí</a></p>
         <p>Para consultar tu horario y tus sesiones da <a href="{% url "scheduler:horario" %}">click aquí.</a></p>
         <p>Para cambiar tu contraseña da <a href="{% url 'scheduler:password_change' %}?next=/app/">click aquí</a></p>
-        <p>Tu número de bus es {{ user.persona.bus_id}} y la placa es {{ user.persona.bus.placa }}</p>
         </div>
     </div>
 </div>
